# sustainability-report-harness

./: .gitignore  AGENTS.md  HARNESS_ARCHITECTURE.md  Makefile  PRD.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  pyproject.toml
Fake Doc 4 test/: DATA_NOTES.md  README.md  intake_proposal.json  project.yaml
Fake Doc 4 test/sources/client/: 01_公司概况与治理.docx  02_可持续发展政策与目标.docx  05_环境绩效数据.xlsx  06_员工与安全数据.xlsx  07_供应链与商业道德.docx  08_2024可持续发展回顾.docx
Fake Doc 4 test/sources/requirements/: 01_报告任务书与内容模板.docx
Fake Doc 4 test/standards/: simulated-standard-a.json  simulated-standard-b.json
docs/: user-guide.html
examples/m1-demo/: brief.md  project.yaml
examples/m1-demo/logs/: harness.jsonl
examples/m1-demo/state/: outline.md  workflow.json
pet-runs/juniper/: imagegen-jobs.json  pet_request.json
pet-runs/juniper/prompts/: base-pet.md  look-cardinals.md
skills/sustainability-report-harness/: SKILL.md  manifest.json
skills/sustainability-report-harness/agents/: openai.yaml
skills/sustainability-report-harness/references/: ADAPTATION-PROTOCOL.md  AGENT-COMPATIBILITY.md  ASSESSMENT-PROTOCOL.md  DRAFTING-PROTOCOL.md  EVIDENCE-PROTOCOL.md  EXPORT-PROTOCOL.md  (+7 more)
tests/: fixture_builders.py  m4_helpers.py  test_adaptation.py  test_audit.py  test_drafting.py  test_exporting.py  test_handoff.py  test_ingestion.py  test_intake.py  test_ledger.py  test_manifest.py  test_mapping.py  test_markdown_export.py  test_models.py  test_mvp_contract.py  test_outline.py  test_parsers.py  test_project.py  test_standards.py  test_trial.py  test_user_guide.py  test_workflow.py
(+97 files in other folders)
